[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/fonts/arial/ARIAL.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/chart_options.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0470588, 0.0470588, 0.0470588, 0.505882 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 15

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[node name="ChartOptions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1335, -641 )
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SpeciesControl" type="HBoxContainer" parent="CenterContainer"]
margin_left = 387.0
margin_top = 150.0
margin_right = 637.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Panel" type="Panel" parent="CenterContainer/SpeciesControl"]
margin_right = 250.0
margin_bottom = 300.0
rect_min_size = Vector2( 250, 300 )
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="SpeciesSettings" type="VBoxContainer" parent="CenterContainer/SpeciesControl/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 15
alignment = 1

[node name="Title" type="Label" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings"]
margin_top = 43.0
margin_right = 250.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 2 )
text = "Chart Settings"
align = 1
valign = 1

[node name="Genes" type="HBoxContainer" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings"]
margin_top = 82.0
margin_right = 250.0
margin_bottom = 122.0
custom_constants/separation = 10
alignment = 1

[node name="Species" type="Label" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/Genes"]
margin_left = 30.0
margin_top = 8.0
margin_right = 134.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Show Chart"
valign = 1

[node name="ShowChart" type="CheckButton" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings/Genes"]
margin_left = 144.0
margin_right = 220.0
margin_bottom = 40.0
pressed = true

[node name="Export" type="Button" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings"]
margin_top = 137.0
margin_right = 250.0
margin_bottom = 167.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Export Population as CSV"
flat = true

[node name="Export2" type="Button" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings"]
margin_top = 182.0
margin_right = 250.0
margin_bottom = 212.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Export Genes as CSV"
flat = true

[node name="Back" type="Button" parent="CenterContainer/SpeciesControl/Panel/SpeciesSettings"]
margin_top = 227.0
margin_right = 250.0
margin_bottom = 257.0
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Cancel"
flat = true

[node name="FileDialog" type="FileDialog" parent="CenterContainer"]
visible = true
margin_left = 262.0
margin_top = 100.0
margin_right = 762.0
margin_bottom = 500.0
rect_min_size = Vector2( 500, 400 )
access = 2
current_dir = "/Program Files (x86)/Steam"
current_file = "new_data.csv"
current_path = "/Program Files (x86)/Steam/new_data.csv"

[connection signal="toggled" from="CenterContainer/SpeciesControl/Panel/SpeciesSettings/Genes/ShowChart" to="." method="_on_ShowChart_toggled"]
[connection signal="pressed" from="CenterContainer/SpeciesControl/Panel/SpeciesSettings/Export" to="." method="_on_Export_pressed"]
[connection signal="pressed" from="CenterContainer/SpeciesControl/Panel/SpeciesSettings/Export2" to="." method="_on_Export2_pressed"]
[connection signal="pressed" from="CenterContainer/SpeciesControl/Panel/SpeciesSettings/Back" to="." method="_on_Back_pressed"]
[connection signal="file_selected" from="CenterContainer/FileDialog" to="." method="_on_FileDialog_file_selected"]
